@startuml
[*] --> PRELAUNCH
PRELAUNCH: Blink 1 time\nData logging interval: 700 ms\nOxidizer filling start and end

ARM: Blink 2 times\nData logging interval: 700 ms

BURN: Blink 3 times\nData logging interval: 200 ms\nEngine on\nLiftoff

COAST: Blink 4 times\nData logging interval: 200 ms\nEngine off\nIn air

POST_FLIGHT: Blink 7 times\nData logging interval: 700 ms\nOn ground

ABORT_COMMAND_RECEIVED: Blink 8 times\nData logging interval: 700 ms\nOn ground\nUmbilical attached

ABORT_COMMUNICATION_ERROR: Blink 9 times\nData logging interval: 700 ms\nOn ground\nUmbilical attached



PRELAUNCH --> ARM : Arm command received

ARM --> BURN : Launch command received twice
ARM --> ABORT_COMMAND_RECEIVED : Abort command received
ARM --> ABORT_COMMUNICATION_ERROR : Lost heartbeat signal

BURN --> COAST : Wait for 8500 ms
BURN --> ABORT_COMMAND_RECEIVED : Abort command received\nUmbilical failed to detach, failed launch\nClose injection valve

COAST --> POST_FLIGHT : Time in post burn > 10 mins
COAST --> ABORT_COMMAND_RECEIVED : Abort command received\nUmbilical failed to detach, failed launch\nClose injection valve

ABORT_COMMAND_RECEIVED --> PRELAUNCH : Reset avionics command reveceived

ABORT_COMMUNICATION_ERROR -> PRELAUNCH : Reset avionics command reveceived

POST_FLIGHT --> [*]
@enduml